[tool.poetry]
name = "account-book"
version = "0.1.0"
description = ""
authors = ["fito-domin <domin.kim@fitogether.com>"]
readme = "README.md"
packages = [{include = "account_book"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
