[tool.poetry]
name = "account-book"
version = "0.1.0"
description = ""
authors = ["fito-domin <domin.kim@fitogether.com>"]
readme = "README.md"
packages = [{include = "account_book"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
pymysql = "^1.0.3"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pyright = "^1.1.301"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
