[tool.poetry]
name = "account-book"
version = "0.1.0"
description = ""
authors = ["dormkim <ehals5921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pymysql = "^1.0.3"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
mysql-connector-python = "^8.0.32"
sqlalchemy = "^2.0.7"
python-dotenv = "^1.0.0"
cryptograpy = "^0.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"
httpx = "^0.23.3"
mysqlclient = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
